--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@ html {
   padding: 0;
   height: 100%;
   background-color: #424242;
+  color: rgba(255, 255, 255, 0.87);
+}
+#content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#content header {
+  font-size: 20px;
 }
 .bar {
   fill: #f5f5f5;
