--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
+
 body,
 html {
   margin: 0;
@@ -7,13 +9,15 @@ html {
   color: rgba(255, 255, 255, 0.87);
 }
 #content {
+  font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 #content header {
-  font-size: 20px;
+  font-size: 24px;
+  font-weight: 500;
 }
 .bar {
   fill: #f5f5f5;
