--- a/style.css
+++ b/style.css
@@ -10,10 +10,12 @@ html {
 }
 #content {
   font-family: 'Roboto', sans-serif;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 16px;
 }
 #content header {
   font-size: 24px;
