--- a/style.css
+++ b/style.css
@@ -42,6 +42,6 @@ html {
   border-radius: 5px;
   background-color: #00b8d4;
   color: rgba(255, 255, 255, 0.87);
-  transform: translateX(-50%);
+  transform: translateX(-50% + 50);
   z-index: 10;
 }
